--- a/style.css
+++ b/style.css
@@ -7,33 +7,34 @@ body {
     font-family: 'IBMPlexMono', monospace;
     font-weight: 200;
     text-transform: uppercase;
+    font-size: 1rem;
 }
 
 canvas {
     display: block;
 }
 
+#main-Panel {
+    position: fixed;
+    right: 1px;
+    top: 1px;
+    bottom: 1px;
+    width: 250px;
+    background: rgba(0, 10, 0, 0.7);
+    border-left: 1px solid #5fff5f;
+    overflow-y: auto;
+    padding: 15px;
+    z-index: 100;
+}
 
 #controls-panel, #info-panel {
-    position: absolute;
-    background: rgba(0, 10, 0, 0.7);
-    padding: 15px;
+    margin-bottom: 20px;
     color: grey;
-    border: 1px solid #5fff5f;
-    border-radius: 2px;
-    z-index: 100;
     text-transform: uppercase;
 }
 
-#controls-panel {
-    bottom: 20px;
-    left: 20px;
-}
-
 #info-panel {
-    width: 250px;
-    bottom: 20px;
-    right: 20px;
+    width: 100%;
 }
 
 h2, h3 {
@@ -44,9 +45,13 @@ h2, h3 {
     text-align: center;
     letter-spacing: 0.15em;
     text-transform: uppercase;
+    font-weight: 200;
+}
+h2 {
+    font-size: 3rem;
+    font-weight: 200;
 }
 
-/* Info panel data layout */
 .info-row {
     display: flex;
     justify-content: space-between;
@@ -60,9 +65,6 @@ h2, h3 {
 
 .data-container {
     text-align: right;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
 }
 
 .data-value {
@@ -80,4 +82,15 @@ h2, h3 {
     text-align: justify;
     letter-spacing: 0.3em;
     width: 100%;
+}
+
+#time-warp-indicator {
+    position: fixed;
+    top: 20px;
+    right: 270px; /* Positioned to avoid overlapping with the main panel */
+    background-color: rgba(255, 50, 50, 0.7);
+    color: white;
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 5px;
 }
